--- a/db.bib
+++ b/db.bib
@@ -1924,6 +1924,18 @@ graphs.},
  year = {2004}
 }
 
+@inproceedings{peng-song-gildea:2015:CoNLL,
+ address = {Beijing, China},
+ author = {Peng, Xiaochang  and  Song, Linfeng  and  Gildea, Daniel},
+ booktitle = {Proceedings of the Nineteenth Conference on Computational Natural Language Learning},
+ link = {http://www.aclweb.org/anthology/K15-1004},
+ month = {July},
+ pages = {32--41},
+ publisher = {Association for Computational Linguistics},
+ title = {A Synchronous Hyperedge Replacement Grammar based approach for AMR parsing},
+ year = {2015}
+}
+
 @inproceedings{pennington-socher-manning:2014:EMNLP2014,
  address = {Doha, Qatar},
  author = {Pennington, Jeffrey  and  Socher, Richard  and  Manning, Christopher},
