--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1685,6 +1685,15 @@ graphs.},
  year = {2004}
 }
 
+@inproceedings{peng-song-gildea:2015:CoNLL,
+ author = {Peng, Xiaochang  and  Song, Linfeng  and  Gildea, Daniel},
+ booktitle = {Proc. of CoNLL-2015},
+ link = {http://www.aclweb.org/anthology/K15-1004},
+ publisher = {ACL},
+ title = {A Synchronous Hyperedge Replacement Grammar based approach for AMR parsing},
+ year = {2015}
+}
+
 @inproceedings{pennington-socher-manning:2014:EMNLP2014,
  author = {Pennington, Jeffrey  and  Socher, Richard  and  Manning, Christopher},
  booktitle = {Proc. of EMNLP-2014},
