--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1440,6 +1440,14 @@ target parsing models.},
  year = {2014}
 }
 
+@inproceedings{peng-song-gildea:2015:CoNLL,
+ author = {Peng, Xiaochang  and  Song, Linfeng  and  Gildea, Daniel},
+ booktitle = {Proc. of CoNLL},
+ link = {http://www.aclweb.org/anthology/K15-1004},
+ title = {A Synchronous Hyperedge Replacement Grammar based approach for AMR parsing},
+ year = {2015}
+}
+
 @inproceedings{pennington-socher-manning:2014:EMNLP2014,
  author = {Pennington, Jeffrey  and  Socher, Richard  and  Manning, Christopher},
  booktitle = {Proc. of EMNLP},
