--- a/db.bib
+++ b/db.bib
@@ -880,6 +880,18 @@ An Exploration},
  year = {2014}
 }
 
+@inproceedings{flanigan-EtAl:2016:N16-1,
+ address = {San Diego, California},
+ author = {Flanigan, Jeffrey  and  Dyer, Chris  and  Smith, Noah A.  and  Carbonell, Jaime},
+ booktitle = {Proceedings of the 2016 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+ link = {http://www.aclweb.org/anthology/N16-1087},
+ month = {June},
+ pages = {731--739},
+ publisher = {Association for Computational Linguistics},
+ title = {Generation from Abstract Meaning Representation using Tree Transducers},
+ year = {2016}
+}
+
 @inproceedings{foland-martin:2017:Long,
  abstract = {We present a system which parses sentences into Abstract Meaning
 Representations, improving state-of-the-art results for this task by more than
