--- a/tinydb.bib
+++ b/tinydb.bib
@@ -669,6 +669,14 @@ An Exploration},
  year = {2014}
 }
 
+@inproceedings{flanigan-EtAl:2016:N16-1,
+ author = {Flanigan, Jeffrey  and  Dyer, Chris  and  Smith, Noah A.  and  Carbonell, Jaime},
+ booktitle = {Proc. of NAACL},
+ link = {http://www.aclweb.org/anthology/N16-1087},
+ title = {Generation from Abstract Meaning Representation using Tree Transducers},
+ year = {2016}
+}
+
 @inproceedings{foland-martin:2017:Long,
  abstract = {We present a system which parses sentences into Abstract Meaning
 Representations, improving state-of-the-art results for this task by more than
