--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1125,6 +1125,25 @@ graphs.},
  year = {2010}
 }
 
+@article{Kuhlmann:2016:TCL:3068346.3068355,
+ acmid = {3068355},
+ address = {Cambridge, MA, USA},
+ author = {Kuhlmann, Marco and Oepen, Stephan},
+ doi = {10.1162/COLI_a_00268},
+ issn = {0891-2017},
+ issue_date = {December 2016},
+ journal = {Comput. Linguist.},
+ link = {https://doi.org/10.1162/COLI_a_00268},
+ month = {dec},
+ number = {4},
+ numpages = {9},
+ pages = {819--827},
+ publisher = {MIT Press},
+ title = {Towards a Catalogue of Linguistic Graph Banks},
+ volume = {42},
+ year = {2016}
+}
+
 @inproceedings{kwiatkowksi-EtAl:2010:EMNLP,
  author = {Kwiatkowksi, Tom  and  Zettlemoyer, Luke  and  Goldwater, Sharon  and  Steedman, Mark},
  booktitle = {Proc. of EMNLP-2010},
