--- a/db.bib
+++ b/db.bib
@@ -107,6 +107,18 @@
  year = {2015}
 }
 
+@inproceedings{banarescu-EtAl:2013:LAW7-ID,
+ address = {Sofia, Bulgaria},
+ author = {Banarescu, Laura  and  Bonial, Claire  and  Cai, Shu  and  Georgescu, Madalina  and  Griffitt, Kira  and  Hermjakob, Ulf  and  Knight, Kevin  and  Koehn, Philipp  and  Palmer, Martha  and  Schneider, Nathan},
+ booktitle = {Proceedings of the 7th Linguistic Annotation Workshop and Interoperability with Discourse},
+ link = {http://www.aclweb.org/anthology/W13-2322},
+ month = {August},
+ pages = {178--186},
+ publisher = {Association for Computational Linguistics},
+ title = {Abstract Meaning Representation for Sembanking},
+ year = {2013}
+}
+
 @inproceedings{Banko:2007:OIE:1625275.1625705,
  acmid = {1625705},
  address = {San Francisco, CA, USA},
