--- a/shortdb.bib
+++ b/shortdb.bib
@@ -99,6 +99,15 @@
  year = {2015}
 }
 
+@inproceedings{banarescu-EtAl:2013:LAW7-ID,
+ author = {Banarescu, Laura  and  Bonial, Claire  and  Cai, Shu  and  Georgescu, Madalina  and  Griffitt, Kira  and  Hermjakob, Ulf  and  Knight, Kevin  and  Koehn, Philipp  and  Palmer, Martha  and  Schneider, Nathan},
+ booktitle = {Proc. of the 7th Linguistic Annotation Workshop and Interoperability with Discourse},
+ link = {http://www.aclweb.org/anthology/W13-2322},
+ publisher = {ACL},
+ title = {Abstract Meaning Representation for Sembanking},
+ year = {2013}
+}
+
 @inproceedings{Banko:2007:OIE:1625275.1625705,
  acmid = {1625705},
  author = {Banko, Michele and Cafarella, Michael J. and Soderland, Stephen and Broadhead, Matt and Etzioni, Oren},
