--- a/tinydb.bib
+++ b/tinydb.bib
@@ -72,6 +72,14 @@
  year = {2016}
 }
 
+@inproceedings{banarescu-EtAl:2013:LAW7-ID,
+ author = {Banarescu, Laura  and  Bonial, Claire  and  Cai, Shu  and  Georgescu, Madalina  and  Griffitt, Kira  and  Hermjakob, Ulf  and  Knight, Kevin  and  Koehn, Philipp  and  Palmer, Martha  and  Schneider, Nathan},
+ booktitle = {Proc. of the 7th Linguistic Annotation Workshop and Interoperability with Discourse},
+ link = {http://www.aclweb.org/anthology/W13-2322},
+ title = {Abstract Meaning Representation for Sembanking},
+ year = {2013}
+}
+
 @article{baum1966statistical,
  author = {Baum, Leonard E and Petrie, Ted},
  journal = {The annals of mathematical statistics},
