--- a/db.bib
+++ b/db.bib
@@ -2065,6 +2065,18 @@ graphs.},
  year = {2014}
 }
 
+@inproceedings{pust-EtAl:2015:EMNLP,
+ address = {Lisbon, Portugal},
+ author = {Pust, Michael  and  Hermjakob, Ulf  and  Knight, Kevin  and  Marcu, Daniel  and  May, Jonathan},
+ booktitle = {Proceedings of the 2015 Conference on Empirical Methods in Natural Language Processing},
+ link = {http://aclweb.org/anthology/D15-1136},
+ month = {September},
+ pages = {1143--1154},
+ publisher = {Association for Computational Linguistics},
+ title = {Parsing English into Abstract Meaning Representation Using Syntax-Based Machine Translation},
+ year = {2015}
+}
+
 @inproceedings{ratinov-roth:2009:CoNLL,
  address = {Boulder, Colorado},
  author = {Ratinov, Lev  and  Roth, Dan},
