--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1799,6 +1799,15 @@ graphs.},
  year = {2014}
 }
 
+@inproceedings{pust-EtAl:2015:EMNLP,
+ author = {Pust, Michael  and  Hermjakob, Ulf  and  Knight, Kevin  and  Marcu, Daniel  and  May, Jonathan},
+ booktitle = {Proc. of EMNLP-2015},
+ link = {http://aclweb.org/anthology/D15-1136},
+ publisher = {ACL},
+ title = {Parsing English into Abstract Meaning Representation Using Syntax-Based Machine Translation},
+ year = {2015}
+}
+
 @inproceedings{ratinov-roth:2009:CoNLL,
  author = {Ratinov, Lev  and  Roth, Dan},
  booktitle = {CoNLL-2009},
