--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1544,6 +1544,14 @@ target parsing models.},
  year = {2014}
 }
 
+@inproceedings{pust-EtAl:2015:EMNLP,
+ author = {Pust, Michael  and  Hermjakob, Ulf  and  Knight, Kevin  and  Marcu, Daniel  and  May, Jonathan},
+ booktitle = {Proc. of EMNLP},
+ link = {http://aclweb.org/anthology/D15-1136},
+ title = {Parsing English into Abstract Meaning Representation Using Syntax-Based Machine Translation},
+ year = {2015}
+}
+
 @inproceedings{ratinov-roth:2009:CoNLL,
  author = {Ratinov, Lev  and  Roth, Dan},
  booktitle = {Proc. of CoNLL},
