--- a/db.bib
+++ b/db.bib
@@ -2992,6 +2992,18 @@ Beam Search},
  year = {2015}
 }
 
+@inproceedings{zhou-EtAl:2016:EMNLP20163,
+ address = {Austin, Texas},
+ author = {Zhou, Junsheng  and  Xu, Feiyu  and  Uszkoreit, Hans  and  QU, Weiguang  and  Li, Ran  and  Gu, Yanhui},
+ booktitle = {Proceedings of the 2016 Conference on Empirical Methods in Natural Language Processing},
+ link = {https://aclweb.org/anthology/D16-1065},
+ month = {November},
+ pages = {680--689},
+ publisher = {Association for Computational Linguistics},
+ title = {AMR Parsing with an Incremental Joint Model},
+ year = {2016}
+}
+
 @inproceedings{zhu-EtAl:2013:ACL20131,
  address = {Sofia, Bulgaria},
  author = {Zhu, Muhua  and  Zhang, Yue  and  Chen, Wenliang  and  Zhang, Min  and  Zhu, Jingbo},
