--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2624,6 +2624,15 @@ Beam Search},
  year = {2015}
 }
 
+@inproceedings{zhou-EtAl:2016:EMNLP20163,
+ author = {Zhou, Junsheng  and  Xu, Feiyu  and  Uszkoreit, Hans  and  QU, Weiguang  and  Li, Ran  and  Gu, Yanhui},
+ booktitle = {Proc. of EMNLP-2016},
+ link = {https://aclweb.org/anthology/D16-1065},
+ publisher = {ACL},
+ title = {AMR Parsing with an Incremental Joint Model},
+ year = {2016}
+}
+
 @inproceedings{zhu-EtAl:2013:ACL20131,
  author = {Zhu, Muhua  and  Zhang, Yue  and  Chen, Wenliang  and  Zhang, Min  and  Zhu, Jingbo},
  booktitle = {Proc. of ACL-2013},
