--- a/db.bib
+++ b/db.bib
@@ -95,6 +95,24 @@
  year = {2006}
 }
 
+@inproceedings{ballesteros-alonaizan:2017:EMNLP2017,
+ abstract = {We present a transition-based AMR parser that directly generates AMR parses
+from plain text.
+We use Stack-LSTMs to represent our parser state and make decisions greedily.
+In our experiments, we show that our parser achieves very competitive scores on
+English using only AMR training data. Adding additional information, such as
+POS tags and dependency trees, improves the results further.},
+ address = {Copenhagen, Denmark},
+ author = {Ballesteros, Miguel  and  Al-Onaizan, Yaser},
+ booktitle = {Proceedings of the 2017 Conference on Empirical Methods in Natural Language Processing},
+ link = {https://www.aclweb.org/anthology/D17-1130},
+ month = {September},
+ pages = {1269--1275},
+ publisher = {Association for Computational Linguistics},
+ title = {AMR Parsing using Stack-LSTMs},
+ year = {2017}
+}
+
 @inproceedings{ballesteros-dyer-smith:2015:EMNLP,
  address = {Lisbon, Portugal},
  author = {Ballesteros, Miguel  and  Dyer, Chris  and  Smith, Noah A.},
