--- a/shortdb.bib
+++ b/shortdb.bib
@@ -90,6 +90,21 @@
  year = {2006}
 }
 
+@inproceedings{ballesteros-alonaizan:2017:EMNLP2017,
+ abstract = {We present a transition-based AMR parser that directly generates AMR parses
+from plain text.
+We use Stack-LSTMs to represent our parser state and make decisions greedily.
+In our experiments, we show that our parser achieves very competitive scores on
+English using only AMR training data. Adding additional information, such as
+POS tags and dependency trees, improves the results further.},
+ author = {Ballesteros, Miguel  and  Al-Onaizan, Yaser},
+ booktitle = {Proc. of EMNLP-2017},
+ link = {https://www.aclweb.org/anthology/D17-1130},
+ publisher = {ACL},
+ title = {AMR Parsing using Stack-LSTMs},
+ year = {2017}
+}
+
 @inproceedings{ballesteros-dyer-smith:2015:EMNLP,
  author = {Ballesteros, Miguel  and  Dyer, Chris  and  Smith, Noah A.},
  booktitle = {Proc. of EMNLP-2015},
