--- a/tinydb.bib
+++ b/tinydb.bib
@@ -58,6 +58,20 @@
  year = {2006}
 }
 
+@inproceedings{ballesteros-alonaizan:2017:EMNLP2017,
+ abstract = {We present a transition-based AMR parser that directly generates AMR parses
+from plain text.
+We use Stack-LSTMs to represent our parser state and make decisions greedily.
+In our experiments, we show that our parser achieves very competitive scores on
+English using only AMR training data. Adding additional information, such as
+POS tags and dependency trees, improves the results further.},
+ author = {Ballesteros, Miguel  and  Al-Onaizan, Yaser},
+ booktitle = {Proc. of EMNLP},
+ link = {https://www.aclweb.org/anthology/D17-1130},
+ title = {AMR Parsing using Stack-LSTMs},
+ year = {2017}
+}
+
 @inproceedings{ballesteros-dyer-smith:2015:EMNLP,
  author = {Ballesteros, Miguel  and  Dyer, Chris  and  Smith, Noah A.},
  booktitle = {Proc. of EMNLP},
@@ -344,7 +358,6 @@ entities and handling polarity.},
 @article{DBLP:journals/coling/Kuhlmann13,
  author = {Marco Kuhlmann},
  bibsource = {dblp computer science bibliography, http://dblp.org},
- doi = {10.1162/COLI_a_00125},
  journal = {Computational Linguistics},
  number = {2},
  timestamp = {Tue, 28 May 2013 20:26:07 +0200},
@@ -999,7 +1012,6 @@ target parsing models.},
  acmid = {3068355},
  address = {Cambridge, MA, USA},
  author = {Kuhlmann, Marco and Oepen, Stephan},
- doi = {10.1162/COLI_a_00268},
  issn = {0891-2017},
  issue_date = {December 2016},
  journal = {Comput. Linguist.},
