--- a/db.bib
+++ b/db.bib
@@ -297,6 +297,18 @@ POS tags and dependency trees, improves the results further.},
  year = {2016}
 }
 
+@inproceedings{cai-knight:2013:Short,
+ address = {Sofia, Bulgaria},
+ author = {Cai, Shu  and  Knight, Kevin},
+ booktitle = {Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 2: Short Papers)},
+ link = {http://www.aclweb.org/anthology/P13-2131},
+ month = {August},
+ pages = {748--752},
+ publisher = {Association for Computational Linguistics},
+ title = {Smatch: an Evaluation Metric for Semantic Feature Structures},
+ year = {2013}
+}
+
 @inproceedings{cai-yates:2013:ACL2013,
  address = {Sofia, Bulgaria},
  author = {Cai, Qingqing  and  Yates, Alexander},
