--- a/shortdb.bib
+++ b/shortdb.bib
@@ -251,6 +251,15 @@ POS tags and dependency trees, improves the results further.},
  year = {2016}
 }
 
+@inproceedings{cai-knight:2013:Short,
+ author = {Cai, Shu  and  Knight, Kevin},
+ booktitle = {Proc. of ACL-2013},
+ link = {http://www.aclweb.org/anthology/P13-2131},
+ publisher = {ACL},
+ title = {Smatch: an Evaluation Metric for Semantic Feature Structures},
+ year = {2013}
+}
+
 @inproceedings{cai-yates:2013:ACL2013,
  author = {Cai, Qingqing  and  Yates, Alexander},
  booktitle = {Proc. of ACL-2013},
