--- a/tinydb.bib
+++ b/tinydb.bib
@@ -196,6 +196,14 @@ POS tags and dependency trees, improves the results further.},
  year = {2016}
 }
 
+@inproceedings{cai-knight:2013:Short,
+ author = {Cai, Shu  and  Knight, Kevin},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P13-2131},
+ title = {Smatch: an Evaluation Metric for Semantic Feature Structures},
+ year = {2013}
+}
+
 @inproceedings{Cao:2007:LRP:1273496.1273513,
  acmid = {1273513},
  author = {Cao, Zhe and Qin, Tao and Liu, Tie-Yan and Tsai, Ming-Feng and Li, Hang},
