--- a/db.bib
+++ b/db.bib
@@ -2531,6 +2531,18 @@ Qun Liu},
  year = {2014}
 }
 
+@inproceedings{werling-angeli-manning:2015:ACL-IJCNLP,
+ address = {Beijing, China},
+ author = {Werling, Keenon  and  Angeli, Gabor  and  Manning, Christopher D.},
+ booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)},
+ link = {http://www.aclweb.org/anthology/P15-1095},
+ month = {July},
+ pages = {982--991},
+ publisher = {Association for Computational Linguistics},
+ title = {Robust Subgraph Generation Improves Abstract Meaning Representation Parsing},
+ year = {2015}
+}
+
 @inproceedings{white-rajkumar:2009:EMNLP,
  address = {Singapore},
  author = {White, Michael  and  Rajkumar, Rajakrishnan},
