--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2229,6 +2229,15 @@ and Dayan, Peter},
  year = {2015}
 }
 
+@inproceedings{werling-angeli-manning:2015:ACL-IJCNLP,
+ author = {Werling, Keenon  and  Angeli, Gabor  and  Manning, Christopher D.},
+ booktitle = {Proc. of IJCNLP-2015},
+ link = {http://www.aclweb.org/anthology/P15-1095},
+ publisher = {ACL},
+ title = {Robust Subgraph Generation Improves Abstract Meaning Representation Parsing},
+ year = {2015}
+}
+
 @inproceedings{white-rajkumar:2009:EMNLP,
  author = {White, Michael  and  Rajkumar, Rajakrishnan},
  booktitle = {Proc. of EMNLP-2009},
