--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1933,6 +1933,14 @@ and Dayan, Peter},
  year = {2015}
 }
 
+@inproceedings{werling-angeli-manning:2015:ACL-IJCNLP,
+ author = {Werling, Keenon  and  Angeli, Gabor  and  Manning, Christopher D.},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P15-1095},
+ title = {Robust Subgraph Generation Improves Abstract Meaning Representation Parsing},
+ year = {2015}
+}
+
 @inproceedings{white-rajkumar:2009:EMNLP,
  author = {White, Michael  and  Rajkumar, Rajakrishnan},
  booktitle = {Proc. of ACL},
