--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2189,6 +2189,24 @@ Qun Liu},
  year = {2015}
 }
 
+@inproceedings{wang-xue:2017:EMNLP2017,
+ abstract = {This paper proposes to tackle the AMR parsing bottleneck by improving two
+components of an AMR parser: concept identification and alignment. We first
+build a Bidirectional LSTM based concept identifier that is able to incorporate
+richer contextual information to learn sparse AMR concept labels. We then
+extend an HMM-based word-to-concept alignment model with graph distance
+distortion and a rescoring method during decoding to incorporate the structural
+information in the AMR graph. We show integrating the two components into an
+existing AMR parser results in consistently better performance over the state
+of the art on various datasets.},
+ author = {Wang, Chuan  and  Xue, Nianwen},
+ booktitle = {Proc. of EMNLP-2017},
+ link = {https://www.aclweb.org/anthology/D17-1129},
+ publisher = {ACL},
+ title = {Getting the Most out of AMR Parsing},
+ year = {2017}
+}
+
 @inproceedings{watanabe-sumita:2015:ACL-IJCNLP,
  author = {Watanabe, Taro  and  Sumita, Eiichiro},
  booktitle = {Proc. of IJCNLP-2015},
