--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1906,6 +1906,23 @@ Qun Liu},
  year = {2015}
 }
 
+@inproceedings{wang-xue:2017:EMNLP2017,
+ abstract = {This paper proposes to tackle the AMR parsing bottleneck by improving two
+components of an AMR parser: concept identification and alignment. We first
+build a Bidirectional LSTM based concept identifier that is able to incorporate
+richer contextual information to learn sparse AMR concept labels. We then
+extend an HMM-based word-to-concept alignment model with graph distance
+distortion and a rescoring method during decoding to incorporate the structural
+information in the AMR graph. We show integrating the two components into an
+existing AMR parser results in consistently better performance over the state
+of the art on various datasets.},
+ author = {Wang, Chuan  and  Xue, Nianwen},
+ booktitle = {Proc. of EMNLP},
+ link = {https://www.aclweb.org/anthology/D17-1129},
+ title = {Getting the Most out of AMR Parsing},
+ year = {2017}
+}
+
 @article{Watkins1992,
  author = {Watkins, Christopher J.C.H.
 and Dayan, Peter},
