--- a/db.bib
+++ b/db.bib
@@ -2507,6 +2507,27 @@ Qun Liu},
  year = {2015}
 }
 
+@inproceedings{wang-xue:2017:EMNLP2017,
+ abstract = {This paper proposes to tackle the AMR parsing bottleneck by improving two
+components of an AMR parser: concept identification and alignment. We first
+build a Bidirectional LSTM based concept identifier that is able to incorporate
+richer contextual information to learn sparse AMR concept labels. We then
+extend an HMM-based word-to-concept alignment model with graph distance
+distortion and a rescoring method during decoding to incorporate the structural
+information in the AMR graph. We show integrating the two components into an
+existing AMR parser results in consistently better performance over the state
+of the art on various datasets.},
+ address = {Copenhagen, Denmark},
+ author = {Wang, Chuan  and  Xue, Nianwen},
+ booktitle = {Proceedings of the 2017 Conference on Empirical Methods in Natural Language Processing},
+ link = {https://www.aclweb.org/anthology/D17-1129},
+ month = {September},
+ pages = {1257--1268},
+ publisher = {Association for Computational Linguistics},
+ title = {Getting the Most out of AMR Parsing},
+ year = {2017}
+}
+
 @inproceedings{watanabe-sumita:2015:ACL-IJCNLP,
  address = {Beijing, China},
  author = {Watanabe, Taro  and  Sumita, Eiichiro},
