--- a/db.bib
+++ b/db.bib
@@ -934,6 +934,18 @@ An Exploration},
  year = {2016}
 }
 
+@inproceedings{flanigan-EtAl:2016:SemEval,
+ address = {San Diego, California},
+ author = {Flanigan, Jeffrey  and  Dyer, Chris  and  Smith, Noah A.  and  Carbonell, Jaime},
+ booktitle = {Proceedings of the 10th International Workshop on Semantic Evaluation (SemEval-2016)},
+ link = {http://www.aclweb.org/anthology/S16-1186},
+ month = {June},
+ pages = {1202--1206},
+ publisher = {Association for Computational Linguistics},
+ title = {CMU at SemEval-2016 Task 8: Graph-based AMR Parsing with Infinite Ramp Loss},
+ year = {2016}
+}
+
 @inproceedings{foland-martin:2017:Long,
  abstract = {We present a system which parses sentences into Abstract Meaning
 Representations, improving state-of-the-art results for this task by more than
