--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,18 @@
+@inproceedings{10.1007/978-3-642-04235-5_30,
+ abstract = {To add to WordNet's contents, and specifically to aid automatic reasoning with WordNet, we classify and label the current relations among derivationally and semantically related noun-verb pairs. Manual inspection of thousands of pairs shows that there is no one-to-one mapping of form and meaning for derivational affixes, which exhibit far less regularity than expected. We determine a set of semantic relations found across a number of morphologically defined noun-verb pair classes.},
+ address = {Berlin, Heidelberg},
+ author = {Fellbaum, Christiane
+and Osherson, Anne
+and Clark, Peter E.},
+ booktitle = {Human Language Technology. Challenges of the Information Society},
+ editor = {Vetulani, Zygmunt
+and Uszkoreit, Hans},
+ pages = {350--358},
+ publisher = {Springer Berlin Heidelberg},
+ title = {Putting Semantics into WordNet's ``Morphosemantic'' Links},
+ year = {2009}
+}
+
 @incollection{Agarwal2005,
  author = {Agarwal, Shivani and Roth, Dan},
  booktitle = {Learning Theory},
