--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1512,6 +1512,21 @@ target parsing models.},
  year = {2014}
 }
 
+@inproceedings{peng-EtAl:2017:EACLlong1,
+ abstract = {Neural attention models have achieved great success in different NLP tasks.
+How- ever, they have not fulfilled their promise on the AMR parsing task due to
+the data sparsity issue. In this paper, we de- scribe a sequence-to-sequence
+model for AMR parsing and present different ways to tackle the data sparsity
+problem. We show that our methods achieve significant improvement over a
+baseline neural attention model and our results are also competitive against
+state-of-the-art systems that do not use extra linguistic resources.},
+ author = {Peng, Xiaochang  and  Wang, Chuan  and  Gildea, Daniel  and  Xue, Nianwen},
+ booktitle = {Proc. of EACL},
+ link = {http://www.aclweb.org/anthology/E17-1035},
+ title = {Addressing the Data Sparsity Issue in Neural AMR Parsing},
+ year = {2017}
+}
+
 @inproceedings{peng-song-gildea:2015:CoNLL,
  author = {Peng, Xiaochang  and  Song, Linfeng  and  Gildea, Daniel},
  booktitle = {Proc. of CoNLL},
