--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1265,6 +1265,16 @@ graphs.},
  year = {2009}
 }
 
+@inproceedings{liang-EtAl:2006:COLACL,
+ author = {Liang, Percy  and  Bouchard-C\^{o}t\'{e}, Alexandre  and  Klein, Dan  and  Taskar, Ben},
+ booktitle = {Proc. of Coling 2006},
+ doi = {10.3115/1220175.1220271},
+ link = {http://www.aclweb.org/anthology/P06-1096},
+ publisher = {ACL},
+ title = {An End-to-End Discriminative Approach to Machine Translation},
+ year = {2006}
+}
+
 @inproceedings{liang-jordan-klein:2011:ACL-HLT2011,
  author = {Liang, Percy  and  Jordan, Michael  and  Klein, Dan},
  booktitle = {Proc. of ACL-2011},
