--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1117,6 +1117,15 @@ target parsing models.},
  year = {2009}
 }
 
+@inproceedings{liang-EtAl:2006:COLACL,
+ author = {Liang, Percy  and  Bouchard-C\^{o}t\'{e}, Alexandre  and  Klein, Dan  and  Taskar, Ben},
+ booktitle = {Proc. of ACL},
+ doi = {10.3115/1220175.1220271},
+ link = {http://www.aclweb.org/anthology/P06-1096},
+ title = {An End-to-End Discriminative Approach to Machine Translation},
+ year = {2006}
+}
+
 @phdthesis{liang2005semi,
  author = {Liang, Percy},
  school = {Citeseer},
