--- a/db.bib
+++ b/db.bib
@@ -1473,6 +1473,19 @@ graphs.},
  year = {2009}
 }
 
+@inproceedings{liang-EtAl:2006:COLACL,
+ address = {Sydney, Australia},
+ author = {Liang, Percy  and  Bouchard-C\^{o}t\'{e}, Alexandre  and  Klein, Dan  and  Taskar, Ben},
+ booktitle = {Proceedings of the 21st International Conference on Computational Linguistics and 44th Annual Meeting of the Association for Computational Linguistics},
+ doi = {10.3115/1220175.1220271},
+ link = {http://www.aclweb.org/anthology/P06-1096},
+ month = {July},
+ pages = {761--768},
+ publisher = {Association for Computational Linguistics},
+ title = {An End-to-End Discriminative Approach to Machine Translation},
+ year = {2006}
+}
+
 @inproceedings{liang-jordan-klein:2011:ACL-HLT2011,
  address = {Portland, Oregon, USA},
  author = {Liang, Percy  and  Jordan, Michael  and  Klein, Dan},
