--- a/db.bib
+++ b/db.bib
@@ -465,6 +465,19 @@ POS tags and dependency trees, improves the results further.},
  year = {1957}
 }
 
+@inproceedings{collins-duffy:2002:ACL,
+ address = {Philadelphia, Pennsylvania, USA},
+ author = {Michael Collins  and  Nigel Duffy},
+ booktitle = {Proceedings of 40th Annual Meeting of the Association for Computational Linguistics},
+ doi = {10.3115/1073083.1073128},
+ link = {http://www.aclweb.org/anthology/P02-1034},
+ month = {July},
+ pages = {263--270},
+ publisher = {Association for Computational Linguistics},
+ title = {New Ranking Algorithms for Parsing and Tagging: Kernels over Discrete Structures, and the Voted Perceptron},
+ year = {2002}
+}
+
 @inproceedings{collins-roark:2004:ACL,
  address = {Barcelona, Spain},
  author = {Collins, Michael  and  Roark, Brian},
