--- a/shortdb.bib
+++ b/shortdb.bib
@@ -391,6 +391,16 @@ POS tags and dependency trees, improves the results further.},
  year = {1957}
 }
 
+@inproceedings{collins-duffy:2002:ACL,
+ author = {Michael Collins  and  Nigel Duffy},
+ booktitle = {Proc. of ACL-2002},
+ doi = {10.3115/1073083.1073128},
+ link = {http://www.aclweb.org/anthology/P02-1034},
+ publisher = {ACL},
+ title = {New Ranking Algorithms for Parsing and Tagging: Kernels over Discrete Structures, and the Voted Perceptron},
+ year = {2002}
+}
+
 @inproceedings{collins-roark:2004:ACL,
  author = {Collins, Michael  and  Roark, Brian},
  booktitle = {ACL-2004},
