--- a/tinydb.bib
+++ b/tinydb.bib
@@ -288,6 +288,15 @@ POS tags and dependency trees, improves the results further.},
  year = {2016}
 }
 
+@inproceedings{collins-duffy:2002:ACL,
+ author = {Michael Collins  and  Nigel Duffy},
+ booktitle = {Proc. of ACL},
+ doi = {10.3115/1073083.1073128},
+ link = {http://www.aclweb.org/anthology/P02-1034},
+ title = {New Ranking Algorithms for Parsing and Tagging: Kernels over Discrete Structures, and the Voted Perceptron},
+ year = {2002}
+}
+
 @inproceedings{collins-roark:2004:ACL,
  author = {Collins, Michael  and  Roark, Brian},
  booktitle = {Proc. of ACL},
