--- a/db.bib
+++ b/db.bib
@@ -2451,6 +2451,19 @@ Qun Liu},
  year = {2014}
 }
 
+@article{TACL431,
+ abstract = {Semantic parsing is the task of translating natural language utterances into a machine-interpretable meaning representation. Most approaches to this task have been evaluated on a small number of existing corpora which assume that all utterances must be interpreted according to a database and typically ignore context. In this paper we present a new, publicly available corpus for context-dependent semantic parsing. The MRL used for the annotation was designed to support a portable, interactive tourist information system. We develop a semantic parser for this corpus by adapting the imitation learning algorithm DAGGER without requiring alignment information during training. DAGGER improves upon independently trained classifiers by 9.0 and 4.8 points in F-score on the development and test sets respectively.},
+ author = {Vlachos, Andreas  and Clark, Stephen},
+ issn = {2307-387X},
+ journal = {Transactions of the Association for Computational Linguistics},
+ keyword = {},
+ link = {https://www.transacl.org/ojs/index.php/tacl/article/view/431},
+ pages = {547--559},
+ title = {A New Corpus and Imitation Learning Framework for Context-Dependent Semantic Parsing},
+ volume = {2},
+ year = {2014}
+}
+
 @article{TACL68,
  abstract = {This paper proposes a discriminative forest reranking algorithm for dependency parsing that can be seen as a form of efficient stacked parsing. A dynamic programming shift-reduce parser produces a packed derivation forest which is then scored by a discriminative reranker, using the 1-best tree output by the shift-reduce parser as guide features in addition to third-order graph-based features. To improve efficiency and accuracy, this paper also proposes a novel shift-reduce parser that eliminates the spurious ambiguity of arc-standard transition systems. Testing on the English Penn Treebank data, forest reranking gave a state-of-the-art unlabeled dependency accuracy of 93.12.},
  author = {Katsuhiko Hayashi and Shuhei Kondo and Yuji Matsumoto},
