--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1845,6 +1845,19 @@ Qun Liu},
  year = {2014}
 }
 
+@article{TACL431,
+ abstract = {Semantic parsing is the task of translating natural language utterances into a machine-interpretable meaning representation. Most approaches to this task have been evaluated on a small number of existing corpora which assume that all utterances must be interpreted according to a database and typically ignore context. In this paper we present a new, publicly available corpus for context-dependent semantic parsing. The MRL used for the annotation was designed to support a portable, interactive tourist information system. We develop a semantic parser for this corpus by adapting the imitation learning algorithm DAGGER without requiring alignment information during training. DAGGER improves upon independently trained classifiers by 9.0 and 4.8 points in F-score on the development and test sets respectively.},
+ author = {Vlachos, Andreas  and Clark, Stephen},
+ issn = {2307-387X},
+ journal = {Transactions of the Association for Computational Linguistics},
+ keyword = {},
+ link = {https://www.transacl.org/ojs/index.php/tacl/article/view/431},
+ pages = {547--559},
+ title = {A New Corpus and Imitation Learning Framework for Context-Dependent Semantic Parsing},
+ volume = {2},
+ year = {2014}
+}
+
 @article{TACL659,
  abstract = {Transition-based approaches based on local classification are attractive for dependency parsing due to their simplicity and speed, despite producing results slightly below the state-of-the-art. In this paper, we propose a new approach for approximate structured inference for transition-based parsing that produces scores suitable for global scoring using local models. This is accomplished with the introduction of error states in local training, which add information about incorrect derivation paths typically left out completely in locally-trained models. Using neural networks for our local classifiers, our approach produces the highest accuracy for transition-based dependency parsing in English.},
  author = {Vaswani, Ashish  and Sagae, Kenji},
