--- a/db.bib
+++ b/db.bib
@@ -2264,6 +2264,18 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2012}
 }
 
+@inproceedings{sachan-xing:2016:P16-2,
+ address = {Berlin, Germany},
+ author = {Sachan, Mrinmaya  and  Xing, Eric},
+ booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 2: Short Papers)},
+ link = {http://anthology.aclweb.org/P16-2079},
+ month = {August},
+ pages = {486--492},
+ publisher = {Association for Computational Linguistics},
+ title = {Machine Comprehension using Rich Semantic Representations},
+ year = {2016}
+}
+
 @inproceedings{sagae-lavie-macwhinney:2005:ACL,
  address = {Ann Arbor, Michigan},
  author = {Sagae, Kenji  and  Lavie, Alon  and  MacWhinney, Brian},
