--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1960,6 +1960,15 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2012}
 }
 
+@inproceedings{sachan-xing:2016:P16-2,
+ author = {Sachan, Mrinmaya  and  Xing, Eric},
+ booktitle = {Proc. of ACL-2016},
+ link = {http://anthology.aclweb.org/P16-2079},
+ publisher = {ACL},
+ title = {Machine Comprehension using Rich Semantic Representations},
+ year = {2016}
+}
+
 @inproceedings{sagae-lavie-macwhinney:2005:ACL,
  author = {Sagae, Kenji  and  Lavie, Alon  and  MacWhinney, Brian},
  booktitle = {Proc. of ACL-2005},
