--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1699,6 +1699,14 @@ as well as are more stable with respect to the remaining hyperparameters.},
  year = {2012}
 }
 
+@inproceedings{sachan-xing:2016:P16-2,
+ author = {Sachan, Mrinmaya  and  Xing, Eric},
+ booktitle = {Proc. of ACL},
+ link = {http://anthology.aclweb.org/P16-2079},
+ title = {Machine Comprehension using Rich Semantic Representations},
+ year = {2016}
+}
+
 @inproceedings{sagae-lavie-macwhinney:2005:ACL,
  author = {Sagae, Kenji  and  Lavie, Alon  and  MacWhinney, Brian},
  booktitle = {Proc. of ACL},
