--- a/db.bib
+++ b/db.bib
@@ -2301,6 +2301,18 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2010}
 }
 
+@inproceedings{shen-EtAl:2016:P16-1,
+ address = {Berlin, Germany},
+ author = {Shen, Shiqi  and  Cheng, Yong  and  He, Zhongjun  and  He, Wei  and  Wu, Hua  and  Sun, Maosong  and  Liu, Yang},
+ booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ link = {http://www.aclweb.org/anthology/P16-1159},
+ month = {August},
+ pages = {1683--1692},
+ publisher = {Association for Computational Linguistics},
+ title = {Minimum Risk Training for Neural Machine Translation},
+ year = {2016}
+}
+
 @inproceedings{Shi:2007:DCB:1625275.1625552,
  acmid = {1625552},
  address = {San Francisco, CA, USA},
