--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1737,6 +1737,14 @@ as well as are more stable with respect to the remaining hyperparameters.},
  year = {2010}
 }
 
+@inproceedings{shen-EtAl:2016:P16-1,
+ author = {Shen, Shiqi  and  Cheng, Yong  and  He, Zhongjun  and  He, Wei  and  Wu, Hua  and  Sun, Maosong  and  Liu, Yang},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P16-1159},
+ title = {Minimum Risk Training for Neural Machine Translation},
+ year = {2016}
+}
+
 @inproceedings{Shi:2007:DCB:1625275.1625552,
  acmid = {1625552},
  author = {Shi, Yanxin and Wang, Mengqiu},
