--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1988,6 +1988,15 @@ state-of-the-art systems that do not use extra linguistic resources.},
  year = {2010}
 }
 
+@inproceedings{shen-EtAl:2016:P16-1,
+ author = {Shen, Shiqi  and  Cheng, Yong  and  He, Zhongjun  and  He, Wei  and  Wu, Hua  and  Sun, Maosong  and  Liu, Yang},
+ booktitle = {Proc. of ACL-2016},
+ link = {http://www.aclweb.org/anthology/P16-1159},
+ publisher = {ACL},
+ title = {Minimum Risk Training for Neural Machine Translation},
+ year = {2016}
+}
+
 @inproceedings{Shi:2007:DCB:1625275.1625552,
  acmid = {1625552},
  author = {Shi, Yanxin and Wang, Mengqiu},
