--- a/db.bib
+++ b/db.bib
@@ -1349,6 +1349,33 @@ graphs.},
  year = {2003}
 }
 
+@inproceedings{konstas-EtAl:2017:Long,
+ abstract = {Sequence-to-sequence models have shown strong performance across a broad range
+of applications. However, their application to parsing and generating text
+using Abstract Meaning Representation (AMR) has been limited, due to the
+relatively limited amount of labeled data and the non-sequential nature of the
+AMR graphs.
+We present a novel training procedure that can lift this limitation using
+millions of unlabeled sentences and careful preprocessing of the AMR graphs.
+For AMR parsing, our model achieves competitive results of 62.1 SMATCH, the
+current best score reported without significant use of external semantic
+resources.
+For AMR generation, our model establishes a new state-of-the-art performance of
+BLEU 33.8.
+We present extensive ablative and qualitative analysis including strong
+evidence that sequence-based AMR models are robust against ordering variations
+of graph-to-sequence conversions.},
+ address = {Vancouver, Canada},
+ author = {Konstas, Ioannis  and  Iyer, Srinivasan  and  Yatskar, Mark  and  Choi, Yejin  and  Zettlemoyer, Luke},
+ booktitle = {Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ link = {http://aclweb.org/anthology/P17-1014},
+ month = {July},
+ pages = {146--157},
+ publisher = {Association for Computational Linguistics},
+ title = {Neural AMR: Sequence-to-Sequence Models for Parsing and Generation},
+ year = {2017}
+}
+
 @inproceedings{koo-carreras-collins:2008:ACLMain,
  address = {Columbus, Ohio},
  author = {Koo, Terry  and  Carreras, Xavier  and  Collins, Michael},
