--- a/shortdb.bib
+++ b/shortdb.bib
@@ -591,6 +591,25 @@ Kai Yu},
  year = {2015}
 }
 
+@article{DBLP:journals/corr/KeskarMNST16,
+ archiveprefix = {arXiv},
+ author = {Nitish Shirish Keskar and
+Dheevatsa Mudigere and
+Jorge Nocedal and
+Mikhail Smelyanskiy and
+Ping Tak Peter Tang},
+ bibsource = {dblp computer science bibliography, http://dblp.org},
+ biburl = {http://dblp.org/rec/bib/journals/corr/KeskarMNST16},
+ eprint = {1609.04836},
+ journal = {CoRR},
+ link = {http://arxiv.org/abs/1609.04836},
+ timestamp = {Wed, 07 Jun 2017 14:42:16 +0200},
+ title = {On Large-Batch Training for Deep Learning: Generalization Gap and
+Sharp Minima},
+ volume = {abs/1609.04836},
+ year = {2016}
+}
+
 @article{DBLP:journals/corr/KongDS15,
  author = {Lingpeng Kong and
 Chris Dyer and
