--- a/db.bib
+++ b/db.bib
@@ -1055,6 +1055,18 @@ graphs.},
  year = {2012}
 }
 
+@inproceedings{gerdes:2013:W13-37,
+ address = {Prague, Czech Republic},
+ author = {Gerdes, Kim},
+ booktitle = {Proceedings of the Second International Conference on Dependency Linguistics (DepLing 2013)},
+ link = {http://www.aclweb.org/anthology/W13-3711},
+ month = {August},
+ pages = {88--97},
+ publisher = {Charles University in Prague, Matfyzpress, Prague, Czech Republic},
+ title = {Collaborative Dependency Annotation},
+ year = {2013}
+}
+
 @article{Gildea:2002:ALS:643092.643093,
  acmid = {643093},
  address = {Cambridge, MA, USA},
