--- a/tinydb.bib
+++ b/tinydb.bib
@@ -804,6 +804,14 @@ graphs.},
  year = {2012}
 }
 
+@inproceedings{gerdes:2013:W13-37,
+ author = {Gerdes, Kim},
+ booktitle = {Proc. of the Second International Conference on Dependency Linguistics (DepLing 2013)},
+ link = {http://www.aclweb.org/anthology/W13-3711},
+ title = {Collaborative Dependency Annotation},
+ year = {2013}
+}
+
 @inproceedings{gimpel-EtAl:2011:ACL-HLT2011,
  author = {Gimpel, Kevin  and  Schneider, Nathan  and  O'Connor, Brendan  and  Das, Dipanjan  and  Mills, Daniel  and  Eisenstein, Jacob  and  Heilman, Michael  and  Yogatama, Dani  and  Flanigan, Jeffrey  and  Smith, Noah A.},
  booktitle = {Proc. of ACL},
