--- a/shortdb.bib
+++ b/shortdb.bib
@@ -925,6 +925,15 @@ graphs.},
  year = {2012}
 }
 
+@inproceedings{gerdes:2013:W13-37,
+ author = {Gerdes, Kim},
+ booktitle = {Proc. of the Second International Conference on Dependency Linguistics (DepLing 2013)},
+ link = {http://www.aclweb.org/anthology/W13-3711},
+ publisher = {Charles University in Prague, Matfyzpress, Prague, Czech Republic},
+ title = {Collaborative Dependency Annotation},
+ year = {2013}
+}
+
 @article{Gildea:2002:ALS:643092.643093,
  acmid = {643093},
  address = {Cambridge, MA, USA},
