--- a/tinydb.bib
+++ b/tinydb.bib
@@ -992,6 +992,16 @@ target parsing models.},
  year = {2008}
 }
 
+@inproceedings{ICWSM101540,
+ abstract = {We present TweetMotif, an exploratory search applica-  tion for Twitter. Unlike traditional approaches to in-  formation retrieval, which present a simple list of mes-  sages, TweetMotif groups messages by frequent signif-  icant terms — a result set’s subtopics — which facili-  tate navigation and drilldown through a faceted search  interface. The topic extraction system is based on syn-  tactic ﬁltering, language modeling, near-duplicate de-  tection, and set cover heuristics. We have used Tweet-  Motif to deﬂate rumors, uncover scams, summarize  sentiment, and track political protests in real-time. A  demo of TweetMotif, plus its source code, is available  at http://tweetmotif.com.},
+ author = {Brendan O'Connor and Michel Krieger and David Ahn},
+ conference = {International AAAI Conference on Web and Social Media},
+ keyword = {faceted search; summarization; clustering; microblogs; information retrieval; exploratory search},
+ link = {https://www.aaai.org/ocs/index.php/ICWSM/ICWSM10/paper/view/1540/1907},
+ title = {TweetMotif: Exploratory Search and Topic Summarization for Twitter},
+ year = {2010}
+}
+
 @inproceedings{jiang-EtAl:2013:ACL2013,
  author = {Jiang, Wenbin  and  Sun, Meng  and  L\"{u}, Yajuan  and  Yang, Yating  and  Liu, Qun},
  booktitle = {Proc. of ACL},
