--- a/db.bib
+++ b/db.bib
@@ -1012,6 +1012,19 @@ graphs.},
  year = {2017}
 }
 
+@inproceedings{Foster:2011:HPT:2908630.2908634,
+ acmid = {2908634},
+ author = {Foster, Jennifer and \c{C}etino\v{g}lu, \"{O}zlem and Wagner, Joachim and Le Roux, Joseph and Hogan, Stephen and Nivre, Joakim and Hogan, Deirdre and Van Genabith, Josef},
+ booktitle = {Proceedings of the 5th AAAI Conference on Analyzing Microtext},
+ link = {http://dl.acm.org/citation.cfm?id=2908630.2908634},
+ numpages = {6},
+ pages = {20--25},
+ publisher = {AAAI Press},
+ series = {AAAIWS'11-05},
+ title = {\#Hardtoparse: POS Tagging and Parsing the Twitterverse},
+ year = {2011}
+}
+
 @inproceedings{gao-guzman-vogel:2010:PAPERS,
  address = {Beijing, China},
  author = {Gao, Qin  and  Guzman, Francisco  and  Vogel, Stephan},
