--- a/tinydb.bib
+++ b/tinydb.bib
@@ -767,6 +767,16 @@ graphs.},
  year = {2017}
 }
 
+@inproceedings{Foster:2011:HPT:2908630.2908634,
+ acmid = {2908634},
+ author = {Foster, Jennifer and \c{C}etino\v{g}lu, \"{O}zlem and Wagner, Joachim and Le Roux, Joseph and Hogan, Stephen and Nivre, Joakim and Hogan, Deirdre and Van Genabith, Josef},
+ booktitle = {Proc. of the 5th AAAI Conference on Analyzing Microtext},
+ link = {http://dl.acm.org/citation.cfm?id=2908630.2908634},
+ numpages = {6},
+ title = {\#Hardtoparse: POS Tagging and Parsing the Twitterverse},
+ year = {2011}
+}
+
 @article{Frnay2014ClassificationIT,
  author = {Beno{\^i}t Fr{\'e}nay and Michel Verleysen},
  journal = {IEEE Transactions on Neural Networks and Learning Systems},
